2002-11-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* sighandlers.cc (octave_new_handler): Delete.
	(install_signal_handlers): Don't call set_new_handler.
	* toplev.cc (main_loop): Handle bad_alloc exception here.

	* sighandlers.cc (octave_new_handler): Allow return after
	OCTAVE_JUMP_TO_TOP_LEVEL.
	(sigfpe_handler): Likewise.

2002-11-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* variables.cc (is_variable): New static function.
	(generate_struct_completions): Only evaluate objects that look
	like variables.

2002-11-12  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pt-jump.h, pt-jump.cc (tree_break_expression,
	tree_continue_expression, tree_return_expression): Rename from
	tree_break_command, tree_continue_command, tree_return_command.
	Implement as expressions that return TRUE instead of commands.
	Change all uses.
	* parse.y (make_break_expression, make_continue_expression,
	make_return_expression): Rename from make_break_command,
	make_continue_command, make_return_command.  Change all uses.
	(jump_expr): Rename from jump_command, type is now expression.
	Use in simple_expr, not command.	

	* toplev.cc (octave_initialized): New global variable.
	(main_loop): Set it to true here.
	* sighandlers.cc (sigint_handler): Exit immediately if we have not
	finished init process.

	* load-save.cc (extract_keyword): Return std::string, not char *.
	Change all uses.
	(read_ascii_data): Likewise.
	(read_binary_data): Likewise.
	(read_hdf5_data): Likewise.
	(read_mat_ascii_data): Likewise.
	(read_mat_binary_data): Likewise.
	(do_load): Name and doc are now std::string objects, not char *.
	(install_loaded_variable): Likewise.
	(read_hdf5_data): Doc is now std::string object, not char *&.
	(read_mat_ascii_data): Call OCTAVE_QUIT in strategic locations.
	(get_lines_and_columns): Likewise.

	* toplev.cc (main_loop): Call OCTAVE_QUIT after executing command.
	* parse.y (parse_and_execute (FILE *)): Likewise.

2002-11-12  Joseph P. Skudlarek  <jskud@jskud.com>
