@@ -1,3 +1,7 @@
+2002-11-15  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* sighandlers.cc (OCTAVE_MEMORY_EXHAUSTED_ERROR): Delete.
+
 2002-11-14  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* sighandlers.cc (octave_new_handler): Delete.
